# c2c

./: README.md  c2c_dev.py  justfile  pyproject.toml
src/c2c/: __init__.py  conversation_storage.py  manager.py  mcp.py
